--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+#./
+.ipynb_checkpoints/
+checkpoints
+# SMF Repo
+dataset/
+data/
+checkpoints/
+models/
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+.ipynb_checkpoints/
+notebooks/.ipynb_checkpoints/
+
+# src
+src/.ipynb_checkpoints/ 
+src/checkpoints/
+src/__pycache__/
+
+# src/utils
+src/utils/__pycache__/
+src/utils/.ipynb_checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
