--- a/smf_env.yml
+++ b/smf_env.yml
@@ -1,4 +1,4 @@
-name: smf
+name: smf_be
 channels:
   - anaconda
   - conda-forge
@@ -24,7 +24,6 @@ dependencies:
   - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py310h74dc2b5_0
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - comm=0.1.2=py310h06a4308_0
   - cryptography=3.4.8=py310h685ca39_1
   - debugpy=1.6.7=py310h6a678d5_0
   - decorator=5.1.1=pyhd8ed1ab_0
@@ -116,32 +115,52 @@ dependencies:
   - zipp=3.11.0=pyhd8ed1ab_0
   - zlib=1.2.12=h7f8727e_2
   - pip:
+      - absl-py==2.0.0
       - accelerate==0.23.0
       - addict==2.4.0
       - aiohttp==3.8.6
       - aiosignal==1.3.1
+      - albumentations==1.3.1
       - aniso8601==9.0.1
+      - appdirs==1.4.4
       - async-timeout==4.0.3
+      - cachetools==5.3.2
+      - click==8.1.7
       - cmake==3.27.7
       - colorlover==0.3.0
       - colour==0.1.5
+      - comm==0.1.4
       - commonmark==0.9.1
+      - contourpy==1.1.1
+      - cycler==0.12.1
+      - docker-pycreds==0.4.0
+      - einops==0.7.0
       - filelock==3.12.4
+      - fonttools==4.43.1
       - frozenlist==1.4.0
       - fsspec==2023.9.2
       - geojson==3.0.1
       - gitdb==4.0.10
+      - gitpython==3.1.40
+      - google-auth==2.23.3
+      - google-auth-oauthlib==1.1.0
+      - grpcio==1.59.2
       - h11==0.14.0
       - huggingface-hub==0.17.3
       - imageio==2.31.5
+      - ipywidgets==7.8.1
       - itsdangerous==2.1.2
       - joblib==1.3.2
+      - jupyter-tensorboard==0.2.0
       - jupyterlab-widgets==1.1.1
       - kiwisolver==1.4.4
       - lazy-loader==0.3
+      - levenshtein==0.23.0
       - lightning==2.1.0
       - lightning-utilities==0.9.0
       - lit==17.0.3
+      - markdown==3.5
+      - matplotlib==3.8.0
       - mpmath==1.3.0
       - multidict==6.0.4
       - munch==2.5.0
@@ -169,42 +188,60 @@ dependencies:
       - nvidia-nvjitlink-cu12==12.2.140
       - nvidia-nvtx-cu11==11.7.91
       - nvidia-nvtx-cu12==12.1.105
+      - oauthlib==3.2.2
       - opencv-python-headless==4.8.1.78
       - packaging==22.0
       - palettable==3.3.3
+      - pandas==2.1.1
+      - pathtools==0.1.2
       - pillow==9.3.0
       - platformdirs==2.6.0
       - plotly==5.13.1
       - protobuf==3.20.3
       - psutil==5.9.4
       - pyarrow==10.0.1
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
       - pympler==1.0.1
       - pyproj==3.4.0
       - pyshp==2.3.1
       - python-box==6.1.0
+      - python-levenshtein==0.23.0
       - python-slugify==7.0.0
       - pytorch-lightning==2.1.0
       - pytz-deprecation-shim==0.1.0.post0
       - pyyaml==6.0.1
       - pyzmq==24.0.1
+      - qudida==0.0.4
+      - rapidfuzz==3.5.2
       - regex==2023.10.3
+      - requests-oauthlib==1.3.1
       - rich==12.6.0
+      - rsa==4.9
       - safetensors==0.4.0
+      - scikit-image==0.22.0
+      - scikit-learn==1.3.1
       - scipy==1.11.3
       - scooby==0.7.0
       - semver==2.13.0
+      - sentry-sdk==1.33.1
+      - setproctitle==1.3.3
       - shapely==1.8.5.post1
       - smmap==5.0.0
       - sympy==1.12
       - tenacity==8.2.2
+      - tensorboard==2.15.0
+      - tensorboard-data-server==0.7.2
       - text-unidecode==1.3
       - threadpoolctl==3.2.0
       - tifffile==2023.9.26
+      - timm==0.9.8
       - tokenizers==0.14.1
       - toml==0.10.2
       - toolz==0.12.0
       - torch==2.0.1
       - torchaudio==2.0.2
+      - torchinfo==1.8.0
       - torchmetrics==1.2.0
       - torchvision==0.15.2
       - tornado==6.2
@@ -214,7 +251,9 @@ dependencies:
       - triton==2.0.0
       - tzdata==2022.7
       - validators==0.20.0
+      - wandb==0.16.0
       - watchdog==2.2.0
       - werkzeug==2.3.3
+      - widgetsnbextension==3.6.6
       - xyzservices==2022.9.0
       - yarl==1.9.2
