--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ dataset/
 data/
 checkpoints/
 wandb/
-models/
+#models/
 .ipynb_checkpoints/
 */.ipynb_checkpoints/*
 .ipynb_checkpoints/
@@ -30,7 +30,7 @@ src/utils/__pycache__/
 src/utils/.ipynb_checkpoints/
 
 #app
-app/models/
+#app/models/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
