--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
+models/*.bin filter=lfs diff=lfs merge=lfs -text
+app/models/*.bin filter=lfs diff=lfs merge=lfs -text
